# LearnOpenGL

./: .gitignore  CMakeLists.txt
include/: shader.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/shaders/: 1.fragment.shader  1.vertex.shader  2.fragment.shader  2.vertex.shader  3.vertex.glsl
